# odra-cep47

./: .env  .env_sample  .gitignore  CHANGELOG.md  Cargo.toml  Odra.toml  README.md
resources/casper_contract_schemas/: cep47_schema.json
resources/legacy/: cep47_schema.json
src/: cep47.rs  cep47_tests.rs  data.rs  events.rs  legacy_events.rs  lib.rs
